2009-04-01  Eric B. Weddington  <eric.weddington@atmel.com>

	* xml/avrgcc-header: Add generation of hardware pin definitions for
	non-xmega devices.

2009-04-01  Eric B. Weddington  <eric.weddington@atmel.com>

	Put all functions in .text.avr-libc section, floating point math
	routines in .text.avr-libc.fplib section.
	* common/sectionname.h: New file.
	* common/asmdef.h: Fix spelling in comments. Change default linker
	section.
	* common/gasava.inc: Comment out macro that is no longer being used.
	* common/macros.inc: Add include file.
	* devtools/gen-avr-lib-tree.sh: Remove use of -mcall-prologues on 2
	xmega devices.
	* libc/misc/eerd_block.c: Change linker section.
	* libc/misc/eerd_dword.c: Same.
	* libc/misc/eerd_word.c: Same.
	* libc/misc/eewr_block.c: Same.
	* libc/misc/eewr_dword.c: Same.
	* libc/misc/eewr_word.c: Same.
	* libc/misc/itoa.S: Same.
	* libc/misc/ltoa.S: Same.
	* libc/misc/mul10.S: Same.
	* libc/misc/mulsi10.S: Same.
	* libc/misc/ultoa.S: Same.
	* libc/misc/utoa.S: Same.
	* libc/pmstring/memchr_P.S: Same.
	* libc/pmstring/memcmp_P.S: Same.
	* libc/pmstring/memcpy_P.S: Same.
	* libc/pmstring/strcasecmp_P.S: Same.
	* libc/pmstring/strcat_P.S: Same.
	* libc/pmstring/strchr_P.S: Same.
	* libc/pmstring/strcmp_P.S: Same.
	* libc/pmstring/strcpy_P.S: Same.
	* libc/pmstring/strcspn_P.S: Same.
	* libc/pmstring/strlcat_P.S: Same.
	* libc/pmstring/strlcpy_P.S: Same.
	* libc/pmstring/strlen_P.S: Same.
	* libc/pmstring/strncasecmp_P.S: Same.
	* libc/pmstring/strncat_P.S: Same.
	* libc/pmstring/strncmp_P.S: Same.
	* libc/pmstring/strncpy_P.S: Same.
	* libc/pmstring/strnlen_P.S: Same.
	* libc/pmstring/strpbrk_P.S: Same.
	* libc/pmstring/strrchr_P.S: Same.
	* libc/pmstring/strsep_P.S: Same.
	* libc/pmstring/strspn_P.S: Same.
	* libc/pmstring/strstr_P.S: Same.
	* libc/stdio/clearerr.c: Same.
	* libc/stdio/fclose.c: Same.
	* libc/stdio/fdevopen.c: Same.
	* libc/stdio/feof.c: Same.
	* libc/stdio/ferror.c: Same.
	* libc/stdio/fgetc.c: Same.